--- a/01-Fundamentals-Part-1/starter/index.html
+++ b/01-Fundamentals-Part-1/starter/index.html
@@ -29,10 +29,10 @@
 <body>
     <h1>JavaScript Fundamentals – Part 1</h1>
 
-    <script src="codingchallenge1.js"></script>
+    <!-- <script src="codingchallenge1.js"></script> -->
     <!-- <script src="codingchallenge2.js"></script> -->
-    <!-- <script src="script.js"></script> -->
-    <!-- <script src="assignments.js"></script> -->
+    <script src="script.js"></script>
+    <script src="assignments.js"></script>
 </body>
 
 </html>
